# mediamtx-ui

./: .env.default  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose-all.yml  docker-compose-hwaccel.yml  docker-compose-mediamtx.yml  docker-compose.yml  package.json  setup.sh
.claude/: launch.json
.claude/session-archives/: README.md
caddy/: Caddyfile
client/: SPIKE_REPORT.md  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  main.jsx  tabsConfig.js
client/src/components/: Header.jsx  Layout.jsx  Screensaver.jsx  Sidebar.jsx
client/src/lib/: fetchManager.js  hls.js  icons.js  mockData.js  settings.jsx  toast.jsx  useClock.js  useIcon.js  viewerHint.jsx  webrtc.js
client/src/styles/: main.css
desktop/electron/: main.js  package-lock.json  package.json  preload.js
desktop/tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src/: main.rs
docker/: Dockerfile.hwaccel
server/: index.js  package-lock.json  package.json
server/lib/: Go2RTC.js  Go2RTCApiProxy.js  MediaMTX.js  MediamtxApiProxy.js  Server.js
server/lib/Routes/: Auth.js  Caddy.js  Docker.js  index.js
server/public/: index.html  viewer.html
server/public/css/: api-docs.css  camera-focus.css  form-item.css  form.css  global.css  header.css  hwaccel.css  logs.css  overview.css  page.css  paths.css  phase2.css  sidebar.css  snapshots.css  sources.css  tab-navigation.css  tab.css  users.css  variables.css
server/public/js/: SettingsService.js  SettingsStore.js  dev.js  fetch_manager.js  icons.js  mock_data.js  page.js  webrtc.js
(+78 files in other folders)
