[package]
name = "mediamtx-dashboard"
version = "2.0.0"
description = "MediaMTX Dashboard - Desktop Application"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
